--- a/verify.html
+++ b/verify.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tank Tools - Email Verification</title>
   <link rel="icon" href="icon.png" type="image/png">
+  <script src="permissions.js"></script>
   <style>
     *{margin:0;padding:0;box-sizing:border-box}body{background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('background.jpg');background-size:cover;background-position:center;background-attachment:fixed;background-repeat:no-repeat;font-family:Arial,sans-serif;min-height:100vh;display:flex;justify-content:center;align-items:center;color:white}
     .container{background:rgba(255,255,255,0.1);backdrop-filter:blur(10px);border-radius:15px;padding:40px;box-shadow:0 8px 32px rgba(0,0,0,0.3);border:1px solid rgba(255,255,255,0.2);width:100%;max-width:500px;text-align:center}
