--- a/live-tanks.html
+++ b/live-tanks.html
@@ -858,7 +858,7 @@
       tanks.forEach(tank => {
         // إصلاح محدود لمشكلة PLCR: التحقق من وجود finishDateTime جاهز للخزانات من PLCR فقط
         let finishDateTime;
-        if (tank.finishDateTime && tank.source === 'PLCR_Calculator') {
+        if (tank.finishDateTime && tank.department === 'PLCR') {
           finishDateTime = new Date(tank.finishDateTime);
         } else {
           finishDateTime = new Date(tank.finishDate + ' ' + tank.finishTime);
@@ -946,7 +946,7 @@
       
       // إصلاح محدود لمشكلة PLCR: التحقق من وجود finishDateTime جاهز للخزانات من PLCR فقط
       let finishDateTime;
-      if (tank.finishDateTime && tank.source === 'PLCR_Calculator') {
+      if (tank.finishDateTime && tank.department === 'PLCR') {
         finishDateTime = new Date(tank.finishDateTime);
       } else {
         finishDateTime = new Date(tank.finishDate + ' ' + tank.finishTime);
